--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,42 @@
-.env
+# Dependencies
 node_modules
-*/node_modules
-frontend/node_modules
+node_modules/
+**/node_modules
+**/node_modules/
+/.pnp
+.pnp.js
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Testing
+/coverage
+
+# Production
+/build
+/dist
+
+# Misc
 .DS_Store
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Cache files
+.cache/
+**/.cache/
+*.pack
+*.pack.old
+
+# Backup files
+/.code_backups
