--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tiptap/core": "2.1.13",
     "@tiptap/extension-color": "latest",
+    "@tiptap/extension-highlight": "^2.11.7",
     "@tiptap/extension-list-item": "2.1.13",
     "@tiptap/extension-text-style": "2.1.13",
     "@tiptap/extension-underline": "^2.11.7",
